--- a/src/app/header-comp/header-comp.component.html
+++ b/src/app/header-comp/header-comp.component.html
@@ -1,14 +1,11 @@
 <div class="header">
     <h4>haikaaal.vercel.app</h4>
     <div class="social">
-        <a href="https://github.com/yourusername" target="_blank">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" alt="GitHub" width="24" height="24">
+        <a href="https://github.com/Kale06" target="_blank" class="fa fa-github">
         </a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" width="24" height="24">
+        <a href="https://linkedin.com/in/kaaal" target="_blank" class="fa fa-linkedin">
         </a>
-        <a href="mailto:your-email@example.com" target="_blank">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/gmail.svg" alt="Email" width="24" height="24">
+        <a href="mailto:muhammad.haikal100602@gmail.com" target="_blank" class="fa fa-envelope">
         </a>
     </div>
 </div>
