Header added tooltips, icons and animations

--- a/src/app/header-comp/header-comp.component.css
+++ b/src/app/header-comp/header-comp.component.css
@@ -4,20 +4,35 @@
     justify-content: space-between;
     background-color: rgb(204, 56, 68);
     color: white;
+    margin: 10px 12px;
     padding: 0px 15px;
     border-radius: 15px;
     animation: fadeFromTop 650ms ease-in-out;
 }
 
-h4 {
+h3 {
     padding-left: 0.7rem;
     font-weight: 300;
     cursor: pointer;
     font-style: italic;
+    transition: 150ms ease-out;
+}
+
+h3:hover {
+    font-weight: 800;
+}
+
+.social {
+    display: flex;
+    align-items: center;
+    justify-content: space-betwee1n;
+}
+
+h3:active {
+    color: rgb(168, 10, 71);
 }
 
 a {
-    padding: 0px 1rem;
     text-decoration: none;
     transition: 150ms ease-out;
     font-size: 18pt;
@@ -25,6 +40,7 @@ a {
 
 @media screen and (min-width: 600px) {
     a {
+        padding: 0px 1rem;
         color: rgb(255, 142, 180);
     }
 
@@ -32,12 +48,17 @@ a {
         scale:1.2;
         color: rgb(255, 253, 253);
     }
+
+    .burger {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 600px) {
-    a {
-        color: rgb(255, 255, 255);
+    .social{
+        display: none;
     }
+    
 }
 
 a:active {
