--- a/src/app/header-comp/header-comp.component.html
+++ b/src/app/header-comp/header-comp.component.html
@@ -1,11 +1,19 @@
 <div class="header">
-    <h4>haikaaal.vercel.app</h4>
+    <button (click)="refreshSite()" class="discrete">
+        <h3>haikaaal.vercel.app</h3>
+    </button>
+        <button class="discrete burger">
+            <i class="material-icons">arrow_drop_down</i>
+        </button>
     <div class="social">
-        <a href="https://github.com/Kale06" target="_blank" class="fa fa-github">
+        <p>
+            <!-- Make service here -->
+        </p>
+        <a matTooltip="Github" href="https://github.com/Kale06" target="_blank" class="fa fa-github">
         </a>
-        <a href="https://linkedin.com/in/kaaal" target="_blank" class="fa fa-linkedin">
+        <a matTooltip="LinkedIn" href="https://linkedin.com/in/kaaal" target="_blank" class="fa fa-linkedin">
         </a>
-        <a href="mailto:muhammad.haikal100602@gmail.com" target="_blank" class="fa fa-envelope">
+        <a matTooltip="Email" href="mailto:muhammad.haikal100602@gmail.com" target="_blank" class="fa fa-envelope">
         </a>
     </div>
 </div>
