--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,11 @@ p {
 p {
     font-weight: 200;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.discrete{
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    color: white;
+}
