Created base for the body and fixed header

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,10 @@
-:root {
-    background-color: black;
+a {
+    text-decoration: none;
+    transition: 150ms ease-out;
+    font-size: 18pt;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-    color: white;
+a:hover {
+    scale: 1.2;
+    color: rgb(255, 253, 253);
 }
