--- a/src/app/header-comp/header-comp.component.css
+++ b/src/app/header-comp/header-comp.component.css
@@ -1,4 +1,6 @@
 .header {
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -8,6 +10,7 @@
     padding: 0px 15px;
     border-radius: 15px;
     animation: fadeFromTop 650ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    z-index: 1;
 }
 
 h3 {
@@ -36,6 +39,12 @@ a {
     text-decoration: none;
     transition: 150ms ease-out;
     font-size: 18pt;
+}
+
+@media screen and (min-width: 1500px) {
+    .header {
+        padding: 0px 15%;
+    }
 }
 
 @media screen and (min-width: 600px) {
@@ -87,10 +96,4 @@ a:active {
 .burg-item * {
     padding: 3px;
     font-weight: 300;
-}
-
-.menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
 }
