--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -31,15 +31,30 @@
             </mat-card-actions>
         </mat-card>
         <!-- Profile -->
-         
+        <mat-card>
+            <mat-card-header>
+                <mat-card-subtitle>
+                    <h3>Profile</h3>
+                </mat-card-subtitle>
+            </mat-card-header>
+            <img style="max-height: 250px; max-width: 100%; object-fit: cover;" mat-card-image src="assets/kaaal.png" alt="Kal-photo">
+            <mat-card-content>
+                <p>
+                    Howdy there! I'm Haikal, although most people would refer to me as Kal for short. I'm an upcoming fresh graduate from Universiti Utara Malaysia, currently pursuing a degree in Information Technology with a field of concentration in Software Engineering. 
+                    <br><br>
+                    I come from Indonesia and have been living in Malaysia for my studies for 3 years, and it has been a blast learning computers. I like to contribute to small-scale open-source projects, tweak with operating systems, and learning data structures and algorithms in Hackerrank. I'm currently learning on how to code in low-level languages (mainly Rust) and how to build a CI/CD pipeline for my projects. I hope to be a software engineer in the future and contribute in the tech field.
+                </p>
+            </mat-card-content>
+        </mat-card>
+
     </div>
     <!-- Righty -->
     <div class="kal-grid">
         <!-- Education -->
             <mat-card>
                 <mat-card-header>
-                    <mat-card-subtitle>
-                        <h3>Education History</h3>
+                    <mat-card-subtitle style="display: flex; align-items: center;">
+                        <mat-icon>school</mat-icon>&nbsp;<h3>Education History</h3>
                     </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
@@ -73,11 +88,60 @@
                 </mat-card-content>
             </mat-card>
         <!-- Work Experiences -->
-        
+        <mat-card>
+            <mat-card-header>
+                <mat-card-subtitle>
+                    <h3>Work Experience</h3>
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                
+            </mat-card-content>
+        </mat-card>
         <!-- Projects -->
-
+        <mat-card>
+            <mat-card-header>
+                <mat-card-subtitle>
+                    <h3>Projects</h3>
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                
+            </mat-card-content>
+        </mat-card>
         <!-- Skills -->
+        <mat-card>
+            <mat-card-header>
+                <mat-card-subtitle style="display: flex; align-items: center;">
+                   <mat-icon>code</mat-icon> <h3>&nbsp;Skills</h3>
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <mat-tab-group>
+                    <mat-tab label="Client-side">
+                        
+                    </mat-tab>
+                    <mat-tab label="Server-side">
 
-         <!-- Documentations/Guides -->
+                    </mat-tab>
+                    <mat-tab label="DB Administration">
+
+                    </mat-tab>
+                  </mat-tab-group>     
+                  <mat-tab-group>
+                    <mat-tab label="CI/CD">
+
+                    </mat-tab>
+                    <mat-tab label="Test/QA">
+
+                    </mat-tab>
+                    <mat-tab label="Programming Langs">
+                        
+                    </mat-tab>
+                  </mat-tab-group>                
+            </mat-card-content>
+        </mat-card>
+        <!-- Favorite playlist -->
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0EN4etN0FxI77qC3BP2WO7?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 </div>
