--- a/src/app/header-comp/header-comp.component.css
+++ b/src/app/header-comp/header-comp.component.css
@@ -11,6 +11,7 @@
     border-radius: 15px;
     animation: fadeFromTop 650ms cubic-bezier(0.075, 0.82, 0.165, 1);
     z-index: 1;
+    transition: all 150ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 h3 {
@@ -44,7 +45,13 @@ a {
 @media screen and (min-width: 1500px) {
     .header {
         padding: 0px 15%;
+
     }
+}
+
+.post-scroll {
+    margin: 0 !important;
+    border-radius: 0 !important;
 }
 
 @media screen and (min-width: 600px) {
